--- a/sample_app/app/views/layouts/application.html.slim
+++ b/sample_app/app/views/layouts/application.html.slim
@@ -11,7 +11,7 @@ html
     = render 'layouts/header'
     .container
       - flash.each do |message_type, message|
-        = content_tag(:div, message, class: 'alert alert-#{message_type}')
+        = content_tag(:div, message, class: 'alert alert-' << message_type)
       = yield
       = render 'layouts/footer'
       = debug(params) if Rails.env.development?
