--- a/sample_app/app/views/microposts/_micropost_details.html.slim
+++ b/sample_app/app/views/microposts/_micropost_details.html.slim
@@ -1,13 +1,13 @@
-li id='micropost-#{@micropost.id}'
-  = link_to gravatar_for(@micropost.user, size: 50), @micropost.user
-  span.user
-    = link_to @micropost.user.name, @micropost.user
-  span.content
-    = @micropost.content
-    = image_tag @micropost.picture.url if @micropost.picture?
-  span.timestamp
-    | Posted
-    =<> time_ago_in_words(@micropost.created_at)
-    | ago.
-    - if current_user?(@micropost.user)
-      =< link_to 'delete', @micropost, method: :delete, data: { confirm: 'You sure?' }
+.micropost-details
+  div id='micropost-#{@micropost.id}'
+    = link_to gravatar_for(@micropost.user, size: 50), @micropost.user
+    span.user
+      = link_to @micropost.user.name, @micropost.user
+    span.content
+      = @micropost.content
+      = image_tag @micropost.picture.url if @micropost.picture?
+    span.timestamp
+      | Posted
+      =<> l @micropost.created_at, format: :long
+      - if current_user?(@micropost.user)
+        =< link_to 'delete', @micropost, method: :delete, data: { confirm: 'You sure?' }
