Unuse gravatar for profile image

--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -150,6 +150,13 @@ aside {
   margin-top: 15px;
 }
 
+.profile-image {
+  display: inline-block;
+  text-align: center;
+  margin-right: 10px;
+  width: 50px;
+}
+
 .stats {
   overflow: auto;
   margin-top: 0;
