--- a/sample_app/app/views/users/_form.html.slim
+++ b/sample_app/app/views/users/_form.html.slim
@@ -13,4 +13,8 @@
   = f.label :password_confirmation, 'Confirmation'
   = f.password_field :password_confirmation, class: 'form-control'
 
+  = image_tag @user.profile_image if @user.profile_image
+  = f.label :profile_image
+  = f.file_field :profile_image
+
   = f.submit yield(:button_text), class: 'btn btn-primary'
