Fix markups and styles

--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -152,6 +152,7 @@ aside {
 
 .profile-image {
   display: inline-block;
+  float: left;
   text-align: center;
   margin-right: 10px;
   width: 50px;
