--- a/sample_app/app/views/microposts/_micropost_details.html.slim
+++ b/sample_app/app/views/microposts/_micropost_details.html.slim
@@ -1,6 +1,7 @@
 .micropost-details
   div id='micropost-#{@micropost.id}'
-    = link_to gravatar_for(@micropost.user, size: 50), @micropost.user
+    span.profile-image
+      = link_to profile_image_for(@micropost.user, size: 50), @micropost.user
     span.user
       = link_to @micropost.user.name, @micropost.user
     span.content
