--- a/sample_app/app/views/users/show_follow.html.slim
+++ b/sample_app/app/views/users/show_follow.html.slim
@@ -2,7 +2,8 @@
 .row
   aside.col-md-4
     section.user_info
-      = gravatar_for(@user)
+      span.profile-image
+        = profile_image_for(@user)
       h1 = @user.name
       span = link_to 'view my profile', @user
       span
@@ -13,7 +14,7 @@
       - if @users.any?
         .user_avatars
           - @users.each do |user|
-            = link_to gravatar_for(user, size: 30), user
+            = link_to profile_image_for(user, size: 30), user
 
   .col-md-8
     h3 = @title
