Change file's location

--- a/sample_app/app/views/shared/_feed.html.slim
+++ b/sample_app/app/views/shared/_feed.html.slim
@@ -1,4 +1,4 @@
 - if @feed_items.any?
   #micropost-root
   = will_paginate @feed_items
-  = javascript_pack_tag 'microposts'
+  = javascript_pack_tag 'micropost/root'
